--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello world!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi asperiores nam dolorem autem alias nihil, voluptatibus quaerat dolore soluta inventore tempore repudiandae quo perspiciatis consectetur ipsam fugiat, ducimus eius quae.</p>
 </body>
 </html>
